{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 24,
  "lineage": "3087b565-ebec-84e9-48e5-65bc465158d6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0000d2f2c5c71dacd",
            "arn": "arn:aws:ec2:eu-west-2:003235076673:instance/i-07a7d8751012870d6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a7d8751012870d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-039ada1f635eed9a1",
            "private_dns": "ip-11-0-0-196.eu-west-2.compute.internal",
            "private_ip": "11.0.0.196",
            "public_ip": "3.8.163.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fc7c11d4d928bcca",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e76b4226c67ee09",
            "tags": {
              "Name": "ec2"
            },
            "tags_all": {
              "Name": "ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09555573e38339231"
            ]
          },
          "dependencies": [
            "aws_security_group.security_group",
            "aws_subnet.publicsubnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:003235076673:internet-gateway/igw-0c2962bac858d00d5",
            "id": "igw-0c2962bac858d00d5",
            "owner_id": "003235076673",
            "vpc_id": "vpc-02b6be3e5141a9c62"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:003235076673:route-table/rtb-02abe1892df7a2995",
            "id": "rtb-02abe1892df7a2995",
            "owner_id": "003235076673",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2962bac858d00d5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02b6be3e5141a9c62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0529919b37efa06a9",
            "route_table_id": "rtb-02abe1892df7a2995",
            "subnet_id": "subnet-02e76b4226c67ee09"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.route_table",
            "aws_subnet.publicsubnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:003235076673:security-group/sg-09555573e38339231",
            "description": "SSH on port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09555573e38339231",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH Access",
            "name_prefix": "",
            "owner_id": "003235076673",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH security group"
            },
            "tags_all": {
              "Name": "SSH security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b6be3e5141a9c62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:003235076673:subnet/subnet-02e76b4226c67ee09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "11.0.0.0/24",
            "id": "subnet-02e76b4226c67ee09",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "003235076673",
            "tags": {
              "Name": "pbsn"
            },
            "tags_all": {
              "Name": "pbsn"
            },
            "vpc_id": "vpc-02b6be3e5141a9c62"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:003235076673:vpc/vpc-02b6be3e5141a9c62",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-04ac4cd7acb85802f",
            "default_route_table_id": "rtb-0a48b8bbd9adf3195",
            "default_security_group_id": "sg-05b5940923a8449a0",
            "dhcp_options_id": "dopt-051e729f68c0a30b0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02b6be3e5141a9c62",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a48b8bbd9adf3195",
            "owner_id": "003235076673",
            "tags": {
              "Name": "vvppcc"
            },
            "tags_all": {
              "Name": "vvppcc"
            }
          }
        }
      ]
    }
  ]
}